[gd_scene load_steps=8 format=3 uid="uid://by3obw3cqucjc"]

[ext_resource type="Script" path="res://scenes/gameplay/death_screen/deathscreen.gd" id="1_7oarg"]
[ext_resource type="FontFile" uid="uid://c10t8b5fip0p8" path="res://assets/fonts/MinimalPixelFont.ttf" id="2_2rkwy"]
[ext_resource type="Shader" path="res://assets/shaders/glitch.gdshader" id="2_5nolm"]
[ext_resource type="AudioStream" uid="uid://6eiiiwypcvuv" path="res://assets/sound/death.wav" id="3_8uiii"]
[ext_resource type="AudioStream" uid="uid://bl4ekhmqjacj3" path="res://assets/sound/clicking.wav" id="5_ln3qj"]
[ext_resource type="AudioStream" uid="uid://bnfojxua8st5g" path="res://assets/sound/ui.wav" id="6_ktbmj"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_scjub"]
shader = ExtResource("2_5nolm")
shader_parameter/shake_power = 0.03
shader_parameter/shake_rate = 0.2
shader_parameter/shake_speed = 5.0
shader_parameter/shake_block_size = 30.5
shader_parameter/shake_color_rate = 0.01

[node name="Deathscreen" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_7oarg")

[node name="PhantomDeath" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_scjub")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color(0.243137, 0.211765, 0.290196, 0.717647)

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color(0.243137, 0.211765, 0.290196, 0.717647)

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Control" type="Control" parent="MarginContainer"]
layout_mode = 2
mouse_filter = 2

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/Control"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2

[node name="Label" type="Label" parent="MarginContainer/Control/CenterContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_2rkwy")
theme_override_font_sizes/font_size = 200
text = "SACRIFICIUM"

[node name="VBoxOptions" type="VBoxContainer" parent="MarginContainer/Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -58.0
offset_top = -38.0
offset_right = 58.0
offset_bottom = 38.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/separation = 20

[node name="Try again" type="LinkButton" parent="MarginContainer/Control/VBoxOptions"]
layout_mode = 2
size_flags_horizontal = 4
mouse_filter = 1
theme_override_fonts/font = ExtResource("2_2rkwy")
theme_override_font_sizes/font_size = 45
text = "TRY AGAIN"
underline = 1

[node name="MainMenu" type="LinkButton" parent="MarginContainer/Control/VBoxOptions"]
layout_mode = 2
mouse_filter = 1
theme_override_fonts/font = ExtResource("2_2rkwy")
theme_override_font_sizes/font_size = 45
text = "MAIN MENU"
underline = 1

[node name="Death" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_8uiii")
volume_db = 10.0

[node name="Static" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_ln3qj")
volume_db = -20.0
pitch_scale = 0.07

[node name="UI" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_ktbmj")
volume_db = -10.0
pitch_scale = 4.0

[connection signal="pressed" from="MarginContainer/Control/VBoxOptions/Try again" to="." method="_on_try_again_pressed"]
[connection signal="pressed" from="MarginContainer/Control/VBoxOptions/MainMenu" to="." method="_on_main_menu_pressed"]
